--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,23 @@ body {
 }
 
 
+.up-arrow {
+    visibility: hidden;
+}
+
+.about-me {
+    visibility: hidden;
+}
+
+.hamburger{
+    display: none;
+}
+
+.studies-mobile {
+    visibility: hidden;
+}
+
+
 .redHeader {
     background-color: #e74c3c;
     top: 0;
@@ -83,6 +100,15 @@ body {
 
 .background {
     background-color: #ecf0f1;
+}
+
+.esprit {
+    font-family: "MultiBold";
+    font-size: 1em;
+    text-align: center;
+    margin-top: -5%;
+    margin-left: -4%;
+    opacity: 0.5;
 }
 
 @media screen and (min-width:1248px) {  
@@ -222,10 +248,10 @@ body {
         margin: auto;
         margin-top: 1%;
         padding-top: 3%;
+        padding-bottom: 3%;
         margin-left: 26%;
         z-index: 4;
         background-color: #f2f8fa;
-        height: 250px;
         width: 80%;
         display: flex;
         flex-direction: column;
@@ -356,5 +382,116 @@ body {
     .iconSocial:hover {
         opacity: 1;
     }
+
+    .timeline-block {
+        display: block;
+        position: relative;
+    }
+
+    .timeline-vertical-bar {
+        height: 100%;
+        width: 0.15em;
+        background-color: #7F8C8D;
+        margin-left: 50%;
+        position: absolute;
+        top:0;
+        opacity: 0.4;
+    }
     
+    .round-plus-button {
+        border-radius: 1em;
+        height: 1em;
+        width: 1em;
+        z-index:5;
+    }
+
+    .horizontal-line {
+        border: 0 none;
+        width: 24%;
+        height: 0em;
+        border-top: 0.07em dashed #95A5A6;
+        margin-top: 0.5em;
+    }
+
+    .timeline-instance-right {
+        position: relative;
+        padding: 5em 0 5em 0;
+        display: flex;
+        justify-content: center;
+        margin-right:40%;
+    }
+
+    .clear {
+        clear: both;
+    }
+
+    .timeline-instance-left {
+        position: relative;
+        padding: 5em 0 5em 0;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        margin-left: 40%;
+    }
+
+    .timeline-event {
+        margin-top: -3.9%;
+    }
+
+    .project-type {
+        text-align: center;
+        font-family: "MultiBold";
+    }
+
+    .project-description {
+        text-align: center;
+        font-family: "SitkaI";
+        font-size: 0.8em;
+    }
+
+    .project-year {
+        font-family: "MultiBold";
+        padding: 0 3% 0 3%;
+        color : #E74C3C;
+        margin-top : -1%;
+    }
+
+    .project-technologies {
+        font-family: "SitkaI";
+        font-style: italic;
+        text-align: center;
+        font-size: 12px;
+        color : #C0392B;
+    }
+
+    .project-info {
+        font-family: "MultiBold";
+        text-align: center;
+    }
+
+    .project-line-icon-left {
+        position: absolute;
+        width: 50%;
+        left: -6.5%;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+    }
+
+    .project-line-icon-right {
+        position: absolute;
+        width: 50%;
+        right: -7%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .round-endline {
+        border-radius: 0.5em;
+        height: 0.5em;
+        width: 0.5em;
+        background-color: #7F8C8D;
+        margin-top: 1.7%; 
+    }
 }
