--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -880,7 +880,7 @@
         margin-top: 0%;
         right: 0%;
         left: 0%;
-        padding: 12px 0 0 12px;
+        padding: 15px 0 0 17px;
         top: -1px;
         position: sticky;
         z-index: 10;
@@ -897,7 +897,8 @@
         top: -1px;
         right: 0%;
         left: 0%;
-        padding: 12px 0 12px 0;
+        padding: 15px 0 17px 0;
+        z-index: 10;
         display: flex;
         justify-content: center;
     }
