--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -355,6 +355,8 @@
 
     .timeline-event {
         margin-top: -3.9%;
+        margin-left: inherit;
+        margin-right: inherit;
     }
 
     .project-type {
@@ -772,6 +774,8 @@
 
     .timeline-event {
         margin-top: -3.9%;
+        margin-left: inherit;
+        margin-right: inherit;
     }
 
     .project-type {
@@ -935,6 +939,7 @@
     .photoProfil {
         height: inherit;
         content: url("../images/faycelbouamoud_photo_carre.png");
+
     }
 
     .lateral-menu {
@@ -1231,6 +1236,8 @@
     .timeline-block {
         display: block;
         position: relative;
+        padding-right: 5%;
+        padding-left: 5%;
     }
 
     .timeline-vertical-bar {
@@ -1281,6 +1288,8 @@
 
     .timeline-event {
         margin-top: -3.9%;
+        margin-left: inherit;
+        margin-right: inherit;
     }
 
     .project-type {
@@ -1372,9 +1381,9 @@
     @media screen and (max-width:425px) and (min-width:320px)  {
         .photo {
             margin-top: 25%;
-            width: 10em;
+            width: 13em;
             border-radius: 0;
-            height: 30.417em;
+            height: 21.417em;
             box-shadow: 0px 0px 5px 3px #BDC3C7;
             margin-left: 3%;
             position: absolute;
