--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ body {
         padding-right: 6%;
         padding-left: 3%;
         margin-top: 1%;
-        margin-right: 20%;
+        margin-left: 20%;
         background-color: #ecf2f4;
         height: 300px;
         width: 80%;
@@ -415,7 +415,7 @@ body {
 
     .timeline-instance-right {
         position: relative;
-        padding: 5em 0 5em 0;
+        padding: 2em 0 2em 0;
         display: flex;
         justify-content: center;
         margin-right:40%;
@@ -427,7 +427,7 @@ body {
 
     .timeline-instance-left {
         position: relative;
-        padding: 5em 0 5em 0;
+        padding: 2em 0 2em 0;
         display: flex;
         flex-direction: row-reverse;
         justify-content: center;
@@ -493,5 +493,11 @@ body {
         width: 0.5em;
         background-color: #7F8C8D;
         margin-top: 1.7%; 
+    }
+    
+    #projects {
+        margin-left: 0%;
+        margin-right: 20%;
+        width: 60%
     }
 }
